# blog.evanchen.cc

./: .gitignore  .pre-commit-config.yml  Makefile  README.md  output  pelicanconf.py  prek.toml  publishconf.py  pyproject.toml  recentconf.py  requirements.txt  rumdl.toml  tasks.py
.github/workflows/: pelican.yml  prek.yml
content/: .gitignore
content/April Fools/: 2023-04-01-boatis.md  2024-04-01-ec5.md  2025-04-01-fashion.md  2026-04-01-toa.md  toa.md
content/Drafts/: 2026-06-26-gpt3.md
content/Essays/: 2015-03-14-writing.md  2016-02-13-sparc.md  2016-05-27-blank.md  2016-08-13-mantra.md  2017-11-08-117d.md  2019-06-01-mop-speech.md  2019-08-25-support.md  2020-01-13-meritocracy.md  2021-07-15-dissent.md  2023-06-03-pride.md  2023-09-19-hanabi.md  2024-04-05-grief.md  2024-06-03-auto-carrot.md  2025-01-31-poset.md  2025-05-12-words-spent.md
content/Hacking/: 2014-02-01-pdf-compress.md  2014-10-07-mac-mini.md  2015-10-25-git-aliases.md  2016-04-03-pdf-shift.md  2016-11-10-dnscrypt.md  2016-12-14-sysrq.md  2022-11-18-javascript.md  2024-10-31-hangul-spellcheck.md  2026-05-04-pelican.md
content/Learning/: 2014-07-27-success.md  2016-01-19-geo-advice.md  2016-04-17-perfect.md  2019-01-31-platitudes.md  2019-05-03-hard-and-soft.md  2019-10-26-sys1.md  2020-06-14-exercises.md  2021-09-21-no-advice.md  2023-08-09-agency.md  2023-10-03-generic.md  2023-10-23-town.md  2024-02-04-np-hard-advice.md  2024-03-14-brianchon.md  2025-02-14-getting-to-know.md  2025-07-16-write-well.md  2025-09-02-most.md  2025-11-11-foresight.md
content/pages/: 404.md  (+2 more)
markdown_ext_custom/: separate_blockquotes.py
markdown_extensions/: figure_caption.py
plugins/: all_articles.py  auto_attach.py  autolink_style.py  cf_redirects.py  latest_json.py  oembed_gen.py  sidenotes.py  sort_tags.py
scripts/: audit_images.py  check-no-dev-push.sh  check-no-merge-on-main.sh  check_links.py  check_metadata.py  check_post.py  drafts.sh  finalize.sh  manage_tags.py  new.py  publish.sh  recent.sh  stage.sh  update-old-urls.py  watch-one.sh
(+162 files in other folders)
