[project]
name = "blog.evanchen.cc"
version = "0.1.0"
description = "Power Overwhelming"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "mdx-truly-sane-lists>=1.3",
    "pelican-katex>=1.8.2",
    "pelican-redirect>=3.0.0",
    "pelican[markdown]>=4.11.0.post0",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "invoke>=2.2.1",
    "livereload>=2.7.1",
    "prek>=0.2.19",
    "ruff>=0.14.4",
]

[tool.djlint]
profile = "jinja"
ignore = "H006,D018"

[tool.ruff.lint]
ignore = ["E731"]
