[project]
name = "blog.evanchen.cc"
version = "0.1.0"
description = "Power Overwhelming"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
    "mdx-truly-sane-lists>=1.3",
    "pelican-katex>=1.8.6",
    "pelican-redirect>=3.0.0",
    "pelican-seo>=1.4.0",
    "pelican[markdown]>=4.11.0.post0",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "prek>=0.3.9",
    "ruff>=0.15.11",
]

[tool.djlint]
profile = "jinja"
ignore = "H006"

[tool.ruff.lint]
ignore = ["E731"]

[tool.codespell]
ignore-words-list = "lifes,HDA,Hart,te,SoCal,AFE,AKS"
